--- a/app/users/template.hbs
+++ b/app/users/template.hbs
@@ -19,13 +19,13 @@
 			<td>{{item.position}}</td>
 			<td>{{item.age}}</td>
 			<td>
-				<a class="btn btn-default">
+				{{#link-to 'edit-user' item.id class="btn btn-default"}}
 					<span class="glyphicon glyphicon-pencil"></span>
-				</a>
+				{{/link-to}}
 				&nbsp;
-				<a class="btn btn-default">
+				<button {{action 'delete' item}} class="btn btn-default">
 					<span class="glyphicon glyphicon-trash"></span>
-				</a>
+				</button>
 			</td>
 		</tr>
 	{{/each}}
